k8s/website-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: us.gcr.io/bdc-backend/website:ci
        ports:
        - name: http
          containerPort: 3001
          protocol: TCP
