k8s/website-service.yml
kind: Service
apiVersion: v1
metadata:
  name: website
spec:
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 3001
  type: NodePort
