k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bdc-kubernetes
spec:
  tls:
  - hosts:
    - gtbigdata.club
    secretName: letsencrypt-prod
  rules:
  - host: gtbigdata.club
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 4000
      - path: /api
        backend:
          serviceName: api
          servicePort: 4001
      - path: /status
        backend:
          serviceName: status
          servicePort: 4002
